# average-minimum-distance

./: .gitignore  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  new_stuff_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
amd/: PeriodicSet.py  _Wasserstein.py  __init__.py  _emd.py  _nearest_neighbours.py  _network_simplex.py  _nns.py  _reader.py  amdio.py  auto.py  calculate.py  ccdc_utils.py  cli.py  compare.py  data.py  io.py  periodicset.py  pset_io.py  reconstruct.py  utils.py
amd/core/: PeriodicSet.py  Wasserstein.py  core.py  eta.py  nearest_neighbours.py
amd/io/: CSDReader.py  CifReader.py  PeriodicSetIO.py  _Reader.py  ccdc_utils.py
average_minimum_distance.egg-info/: PKG-INFO  SOURCES.txt
docs/: PDDs.hdf5  conf.py  environment.yaml  howto.txt  objects.inv  objs.txt  requirements.txt
docs/_build/rinoh/: average-minimum-distance.rtc  average-minimum-distance.stylelog
docs/_build/rinoh/.doctrees/: environment.pickle  index.doctree
docs/source/: Description_of_AMD_PDD.rst  Disorder.rst  Get_Started.rst  Getting_Started.rst  Miscellaneous.rst  PDDs.rst  Pset IO.rst  Quick_reference.rst  Reading_cifs.rst  Reading_from_the_CSD.rst  Using_AMD.rst  Using_AMDs.rst  Using_PDD.rst  Using_PDDs.rst  amd.amdio.rst  amd.calculate.rst  amd.ccdc_utils.rst  amd.io.rst  amd.rst  common uses.rst  conf.py  custom.css  index.rst  miscellaneous.rst  modules.rst  reading cifs.rst  reading from CSD.rst
docs/source/_build/doctrees/: Description_of_AMD_PDD.doctree  Get_Started.doctree  Miscellaneous.doctree  Reading_cifs.doctree  Reading_from_the_CSD.doctree  Using_AMDs.doctree  Using_PDDs.doctree  amd.calculate.doctree  amd.compare.doctree  amd.io.doctree  amd.periodicset.doctree  amd.utils.doctree  index.doctree
examples/: CaCO3.cif  T2_gamma.cif  cubic.cif  example_crystal_1_v2.cif  example_crystals.cif  guide.ipynb  using_auto.py
src/amd/: __init__.py  _emd.py  _nearest_neighbors.py  _nearest_neighbours.py  _nns.py  _types.py  atomic_masses.json  atomic_numbers.json  calculate.py  cif_tags.json  cli.py  compare.py  globals_.py  io.py  periodicset.py  reconstruct.py  utils.py
tests/: T2_alpha.cif  conftest.py  cubic.cif  examples.ipynb  test_CSDReader.py  test_CifReader.py  test_calculate.py  test_compare.py  test_pset_io.py  test_utils.py  write_tests_for.txt
tests/data/: BABMUQ.cif  CSD_families.hdf5  CSD_families.pkl  CSD_families_cdm.npz  CSD_families_raw.hdf5  OJIGOG.cif  T2_exp_vs_sim_cdm.npz  T2_experimental.cif  T2_experimental.hdf5  T2_experimental.pkl  T2_experimental_cdm.npz  cubic.cif  cubic.hdf5  cubic.pkl  eq_sites_test.cif  pickle_psets.py  regenerate_data.py
