[metadata]
name = average-minimum-distance
version = 1.1.8
author = Daniel Widdowson
author_email = sgdwiddo@liverpool.ac.uk
description = For calculation and comparison of AMD/PDD isometric invariants of periodic sets. Includes .cif reading functionality.
keywords = isometry, invariant, cif, crystal, amd, pdd, similarity, average, minimum, distance, point-wise, distribution
license = Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Public License
license_files = file: LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dwiddo/average-minimum-distance
classifiers = 
	Development Status :: 3 - Alpha
	License :: Other/Proprietary License
	Intended Audience :: Science/Research
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls = 
	Bug Tracker = https://github.com/dwiddo/average-minimum-distance/issues
	Changelog = https://github.com/dwiddo/average-minimum-distance/blob/master/CHANGELOG.md

[options]
python_requires = >=3.7
packages = find:
install_requires = 
	numpy>=1.21
	scipy>=1.6.1
	ase>=3.22.0
	numba>=0.55.0
	h5py>=3.3.0

[options.extras_require]
ccdc = 
	csd-python-api

[egg_info]
tag_build = 
tag_date = 0