[metadata]
name = average-minimum-distance
version = attr: amd.__version__
url = https://github.com/dwiddo/average-minimum-distance
author = Daniel Widdowson
author_email = D.E.Widdowson@liverpool.ac.uk
maintainer = Daniel Widdowson
maintainer_email = D.E.Widdowson@liverpool.ac.uk
description = Descriptors of crystals based on geometry (isometry invariants).
long_description = file: README.md
long_description_content_type = text/markdown
license = Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Public License
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics
keywords = 
    isometry
    invariant
    descriptor
    crystal
    amd
    pdd
    similarity
    average
    minimum
    pointwise
    distance
    cif

[options]
include_package_data = True
packages = find:
install_requires =
    numpy>=1.21
    numba>=0.55.2
    scipy>=1.6.1
    joblib>=1.1.0
    pandas>=1.2.5
    ase>=3.22.0
    tqdm>=4.1.0

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    amd-compare = amd.cli:main

[options.extras_require]
ccdc = csd-python-api
gemmi = gemmi
pymatgen = pymatgen
dev = pytest

[options.packages.find]
exclude =
    examples*
    docs*
    tests*